--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div class="navbar-nav">
                     <div class="d-flex justify-content-center mt-3">
                         <a href="#redirigir">
-                            <img class="img-fluid logo_nav" src="images/cart.png" alt="cart">
+                            <img class="img-fluid logo_nav" src="Images/cart.png" alt="cart">
                         </a>                        
                     </div>
                 </div>
@@ -89,7 +89,7 @@
     <div class="text-center">
     <div id="redirigir" class="dropdown">        
         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        <img class="cartImg" src="images/cart.png" alt=""><span id="carritoCantidad" class="badge badge-light">0</span>
+        <img class="cartImg" src="Images/cart.png" alt=""><span id="carritoCantidad" class="badge badge-light">0</span>
         </button> 
         <div id="carritoProductos" class="dropdown-menu" aria-labelledby="dropdownMenuButton">
         </div>    
@@ -106,8 +106,8 @@
             <div class="col-lg-12 text-center text-lg-center">
                 <h4 class="fw-bold mb-3 mt-5 text-light">Consulta tus dudas en nuestras redes</h4>
                 <div>
-                    <a href="https://www.instagram.com/burggies.ros/" target="_blank"><img src="images/instagram.png" alt="icono de instagram"></a>
-                    <a href="https://api.whatsapp.com/send?phone=543412805489" target="_blank"><img src="images/whatsapp.png" alt="icono de whatsapp"></a>
+                    <a href="https://www.instagram.com/burggies.ros/" target="_blank"><img src="Images/instagram.png" alt="icono de instagram"></a>
+                    <a href="https://api.whatsapp.com/send?phone=543412805489" target="_blank"><img src="Images/whatsapp.png" alt="icono de whatsapp"></a>
                 </div>
             </div>            
         </div>
