--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <h1 class="display-4">¡Aprovechá la promo "Stockeate" al mejor precio!</h1>
                 <p class="lead">La promo stockeate consta de 16 medallones, 4 de cada sabor, a $760.</p>
                 <hr class="my-4">
-                <img class="ajustador" src="Images/stockeate1.jpg" alt="promo-stockeate">                
+                <img class="ajustador img-fluid" src="Images/stockeate1.jpg" alt="promo-stockeate">                
             </div>
     </div>
     <!--Indicador de Carga-->
